fix(gtk320): fallback values for '$spacing - Npx' cases

--- a/src/gtk-3.20/scss/apps/_nautilus.scss
+++ b/src/gtk-3.20/scss/apps/_nautilus.scss
@@ -40,8 +40,8 @@
             margin-top: -1px;
 
             searchbar {
-                padding-top: $spacing - 3px;
-                padding-bottom: $spacing - 2px;
+                padding-top: if($spacing > 3px, $spacing, 3px) - 3px;
+                padding-bottom: if($spacing > 2px, $spacing, 2px) - 2px;
                 border-bottom: 1px solid $borders_color;
             }
         }
