--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -92,7 +92,7 @@
 
 @include exports("toolbar_extends") {
     %toolbar {
-        padding: $spacing - 1px;
+        padding: if($spacing > 1px, $spacing, 1px) - 1px;
         border-style: none;
 
         // toolbar separators
